# phosh-mobile-settings

./: .editorconfig  .gitignore  .gitlab-ci.yml  NEWS  README.md  meson.build  meson.options  run.in
.gitlab-ci/: debian.Dockerfile  g-style  g-style.py  uncrustify.cfg
data/: leak-suppress.txt  meson.build  mobi.phosh.MobileSettings.desktop.in  mobi.phosh.MobileSettings.metainfo.xml.in  mobi.phosh.MobileSettings.nobuiltins.desktop.in  phosh-mobile-settings.rules  phosh-mobile-settings.rules.in
data/icons/: download.gpa
debian/: changelog  control  gbp.conf  gir1.2-pms-1.0.install  libpms-1.0-0.install  libpms-1.0-common.install  libpms-dev.install  not-installed  phosh-mobile-settings.install  rules
debian/tests/: control
docs/: meson.build  phosh-mobile-settings.rst
examples/: Makefile  meson.build  pms-prefs-example.c  pms-prefs-example.py
libpms/: libpms-enums.h  libpms.gresource.xml  libpms.h  meson.build  ms-lang.c  ms-lang.h  ms-main.c  ms-main.h  ms-os-update-priv.h  ms-os-update.c  ms-os-update.h  ms-os-updater-priv.h  ms-os-updater.c  ms-os-updater.h  ms-osk-add-layout-dialog.c  ms-osk-add-layout-dialog.h  ms-osk-add-layout-dialog.ui  ms-osk-layout-prefs.c  ms-osk-layout-prefs.h  ms-osk-layout-prefs.ui  ms-osk-layout-priv.h  ms-osk-layout-row-priv.h  ms-osk-layout-row.c  ms-osk-layout-row.ui  ms-osk-layout.c
libpms/lang/: cc-common-language.c  cc-language-chooser.c  cc-language-chooser.ui  cc-language-row.c  cc-util.c  cc-util.h  ms-common-language.c  ms-common-language.h  ms-language-chooser.c  ms-language-chooser.h  ms-language-chooser.ui  ms-language-row.c  ms-language-row.h  ms-language-row.ui  ms-util.c
libpms/systemd-sysupdate/: meson.build  ms-systemd-sysupdate.c  ms-systemd-sysupdate.h  org.freedesktop.sysupdate1.xml
plugins/librem5/: ms-plugin-librem5-panel.c  ms-plugin-librem5-panel.h  ms-plugin-librem5.c
plugins/librem5/ui/: ms-plugin-librem5-panel.ui
po/: LINGUAS  POTFILES.in  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  eo.po  eu.po  fa.po  fi.po  he.po  ht.po  hu.po  it.po  ja.po  ka.po  kk.po  kw.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po
src/: main.c  meson.build  mobile-settings-application.c  mobile-settings-debug-info.c  mobile-settings-window.c  mobile-settings.gresource.xml  ms-about-panel.c  ms-about-panel.h  ms-alerts-panel.c  ms-application.c  ms-application.h  ms-audio-device-row.c  ms-audio-device-row.h  ms-audio-device.c  ms-audio-device.h  ms-audio-devices.c  ms-cb-message-row.c  ms-cb-message-row.h  ms-compositor-panel.c  ms-convergence-panel.c  ms-debug-info.c  ms-debug-info.h  ms-enums.h  ms-feedback-panel.c  ms-feedback-row.c  ms-head-tracker.c  ms-hidden-app-row.c  ms-hidden-app-row.h  ms-hidden-apps-dialog.c  ms-hidden-apps-dialog.h  ms-lang-panel.c  ms-lang-panel.h  ms-main.c  ms-main.h  ms-osk-add-shortcut-dialog.c  ms-osk-add-shortcut-dialog.h  ms-osk-layout-row.c  ms-osk-panel.c  ms-overview-panel.c  ms-panel-switcher.c  (+24 more)
src/conf-tweaks/: README.md  meson.build  ms-tweaks-backend-interface.c  ms-tweaks-backend-interface.h  ms-tweaks-callback-handlers.c  ms-tweaks-callback-handlers.h  ms-tweaks-datasources.c  ms-tweaks-datasources.h  ms-tweaks-files-poison.h  ms-tweaks-mappings.c  ms-tweaks-mappings.h  ms-tweaks-parser.c  ms-tweaks-parser.h  ms-tweaks-preferences-page.c  ms-tweaks-preferences-page.h  ms-tweaks-utils.c  ms-tweaks-utils.h
src/conf-tweaks/backends/: meson.build  ms-tweaks-backend-gsettings.c  ms-tweaks-backend-gsettings.h  ms-tweaks-backend-gtk3settings.c  ms-tweaks-backend-gtk3settings.h  ms-tweaks-backend-symlink.c  ms-tweaks-backend-symlink.h  ms-tweaks-backend-sysfs.c  ms-tweaks-backend-sysfs.h  ms-tweaks-backend-xresources.c  ms-tweaks-backend-xresources.h
src/ui/: mobile-settings-window.ui  ms-about-panel.ui  ms-alerts-panel.ui  ms-cb-message-row.ui  ms-feedback-panel.ui  ms-hidden-app-row.ui  ms-hidden-apps-dialog.ui  ms-lang-panel.ui  ms-osk-add-shortcut-dialog.ui  ms-osk-panel.ui  ms-overview-panel.ui  ms-panel-switcher.ui  ms-plugin-row.ui  ms-sound-row.ui  ms-updates-panel.ui  ms-welcome-panel.ui  ms-window.ui  shortcuts-dialog.ui
subprojects/: gvc.wrap
subprojects/packagefiles/gvc/: 0001-mixer-control-Don-t-leak-ui-device.patch
tests/: meson.build  test-add-shortcut-dialog.c  test-tweaks-backend-common.h  test-tweaks-backend-constants.h  test-tweaks-backend-gsettings.c  test-tweaks-backend-gtk3settings.c  test-tweaks-backend-symlink.c  test-tweaks-backend-sysfs.c  test-tweaks-backend-xresources.c  test-tweaks-datasources.c  test-tweaks-gtk-utils.c  test-tweaks-mappings.c  test-tweaks-page-builder.c  test-tweaks-parser.c  test-tweaks-preferences-page.c  test-tweaks-utils.c
tests/data/: widgets-types.yml
tests/mocks/: sysupdate.py
tests/utils/: ms-tweaks-backend-dummy.h
