option('tweaks-data-dir',
       type: 'string', value: '/usr/share/postmarketos-tweaks',
       description: 'Path at which Configurable Tweaks YAML files will be searched for')

option('introspection', type: 'boolean', value: true,
       description : 'Build introspection data (requires gobject-introspection)')

option('examples', type: 'boolean', value: false,
       description: 'Whether to compile the examples')

option('man', type: 'boolean', value: false,
       description: 'Generate man pages (requires rst2man)')
