subdir('backends')

conf_tweaks_inc = include_directories('.')

conf_tweaks_sources = files(
  'ms-tweaks-backend-interface.c',
  'ms-tweaks-backend-interface.h',
  'ms-tweaks-callback-handlers.c',
  'ms-tweaks-callback-handlers.h',
  'ms-tweaks-datasources.c',
  'ms-tweaks-datasources.h',
  'ms-tweaks-files-poison.h',
  'ms-tweaks-gtk-utils.c',
  'ms-tweaks-gtk-utils.h',
  'ms-tweaks-mappings.c',
  'ms-tweaks-mappings.h',
  'ms-tweaks-parser.c',
  'ms-tweaks-parser.h',
  'ms-tweaks-preferences-page.c',
  'ms-tweaks-preferences-page.h',
  'ms-tweaks-utils.c',
  'ms-tweaks-utils.h',
) + backend_sources
