backend_sources = files(
  'ms-tweaks-backend-gsettings.c',
  'ms-tweaks-backend-gsettings.h',
  'ms-tweaks-backend-gtk3settings.c',
  'ms-tweaks-backend-gtk3settings.h',
  'ms-tweaks-backend-symlink.c',
  'ms-tweaks-backend-symlink.h',
  'ms-tweaks-backend-xresources.c',
  'ms-tweaks-backend-xresources.h',
)
